<resources>
    <string name="app_name" translatable="false">OMTest</string>
    <string name="videoid">Video ID:\u0020</string>
    <string name="videoname">Name:\u0020</string>
    <string name="videodescription">Description:\u0020</string>
    <string name="videoprovider">Provider:\u0020</string>
    <string name="videoduration">Duration:\u0020</string>
    <string name="videoyear">Year:\u0020</string>
    <string name="videodefinition">Definition:\u0020</string>
    <string name="nameFrame">List Videos</string>
    <string name="nameFrameFav">Favorite Videos</string>
    <string name="rating" translatable="false">Rating:\u0020</string>
    <string name="ratingCount">Raters Count:\u0020</string>
    <string name="genre">Genre:\u0020</string>
    <string name="end">End:\u0020</string>
</resources>