<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mcv_videoItem"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="20dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="140dp"
            android:maxHeight="140dp"
            android:minWidth="100dp"
            android:minHeight="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@android:drawable/ic_menu_report_image" />

        <TextView
            android:id="@+id/tv_videoID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/videoid"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_videoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:maxLines="1"
            android:text="@string/videoname"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/tv_videoID" />

        <TextView
            android:id="@+id/tv_videoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:maxLines="4"
            android:text="@string/videodescription"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/tv_videoName" />

        <TextView
            android:id="@+id/tv_videoProvider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/videoprovider"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/tv_videoDescription" />

        <TextView
            android:id="@+id/tv_videoDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/videoduration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/tv_videoDefinition" />

        <TextView
            android:id="@+id/tv_videoYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/videoyear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_videoID"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_videoDefinition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/videodefinition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_videoProvider"
            app:layout_constraintTop_toBottomOf="@id/tv_videoDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>